objects/copado__Deployment_Flow_Step__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Org_Name__c</fullName>
        <formula>copado__Destination_Environment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Org_Name__c</fullName>
        <formula>copado__Source_Environment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Automatically_Merge_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Merge and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <inlineHelpText>Git branch linked to the source environment.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Commits_Ahead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commits Ahead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Commits_Behind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commits Behind</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field manages override of Connection Behavior on Pipeline Connection basis</description>
        <label>Connection Behavior Override</label>
        <referenceTo>copado__Connection_Behavior__c</referenceTo>
        <relationshipLabel>Pipeline Connections</relationshipLabel>
        <relationshipName>Pipeline_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior__c</fullName>
        <formula>If( NOT(ISBLANK( copado__Connection_Behavior_Override__c )), copado__Connection_Behavior_Override__c,  copado__Destination_Environment__r.copado__Connection_Behavior__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connection Behavior</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Pipeline Connections</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Branch__c</fullName>
        <description>Value updated automatically by Copado. This is defined in the Deployment Flow Step of the Destination Environment.</description>
        <inlineHelpText>Value updated automatically by Copado. This is defined in the Deployment Flow Step of the Destination Environment.</inlineHelpText>
        <label>Destination Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipName>Deployment_Flow_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Enable_as_Scratch_Org_Destination__c</fullName>
        <label>Enable as Scratch Org Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default DX Target</fullName>
                </value>
                <value>
                    <fullName>DX Target</fullName>
                </value>
                <value>
                    <fullName>DX Patch Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Last_Merge_Base__c</fullName>
        <description>Last date and time when the source and target branch were in Sync (no commits ahead or behind).</description>
        <inlineHelpText>Last date and time when the source and target branch were in Sync (no commits ahead or behind).</inlineHelpText>
        <label>Last Merge Base</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Merge_CBM_Sync__c</fullName>
        <description>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the destination environment.</description>
        <inlineHelpText>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the destination environment.</inlineHelpText>
        <label>Last Merge CBM Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Pull_CBM_Sync__c</fullName>
        <description>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the source environment.</description>
        <inlineHelpText>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the source environment.</inlineHelpText>
        <label>Last Pull CBM Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Merge_Auto_Resolved_Files__c</fullName>
        <description>List of conflicted files auto resolved by Copado when merging the source branch into the destination branch.</description>
        <inlineHelpText>List of conflicted files auto resolved by Copado when merging the source branch into the destination branch.</inlineHelpText>
        <label>Merge Auto Resolved Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Pull_Auto_Resolved_Files__c</fullName>
        <description>List of conflicted files auto resolved by Copado when merging the destination branch into the source branch.</description>
        <inlineHelpText>List of conflicted files auto resolved by Copado when merging the destination branch into the source branch.</inlineHelpText>
        <label>Pull Auto Resolved Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sync_Merge_State__c</fullName>
        <label>Sync Merge State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs recalculating</fullName>
                    <default>true</default>
                    <label>Needs recalculating</label>
                </value>
                <value>
                    <fullName>Recalculating</fullName>
                </value>
                <value>
                    <fullName>In sync</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation errors</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Sync_Pull_State__c</fullName>
        <label>Sync Pull State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs recalculating</fullName>
                    <default>true</default>
                    <label>Needs recalculating</label>
                </value>
                <value>
                    <fullName>Recalculating</fullName>
                </value>
                <value>
                    <fullName>In sync</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validation errors</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test_Level__c</fullName>
        <inlineHelpText>Recommended Test Level: &quot;Run Local Tests&quot;</inlineHelpText>
        <label>Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Test Run</fullName>
                    <default>true</default>
                    <label>No Test Run</label>
                </value>
                <value>
                    <fullName>Run Specified Tests</fullName>
                </value>
                <value>
                    <fullName>Run Local Tests</fullName>
                </value>
                <value>
                    <fullName>Run All Tests In Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pipeline Connection</label>
    <nameField>
        <displayFormat>DFS-{000000}</displayFormat>
        <label>Pipeline Connection Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>